python-web-server/tests/requests/invalid/prefix_05.py
from web_server.config import MessageConfig
from web_server.http.errors import InvalidRequestMethod

cfg = MessageConfig.default()
request = InvalidRequestMethod
